--- a/package.json
+++ b/package.json
@@ -1,68 +1,105 @@
 {
-	"name": "rusmanwahab",
-	"version": "0.0.0",
-	"license": "MIT",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"test": "ng test",
-		"lint": "./node_modules/.bin/nx lint && ng lint",
-		"e2e": "ng e2e",
-		"affected:apps": "./node_modules/.bin/nx affected:apps",
-		"affected:libs": "./node_modules/.bin/nx affected:libs",
-		"affected:build": "./node_modules/.bin/nx affected:build",
-		"affected:e2e": "./node_modules/.bin/nx affected:e2e",
-		"affected:test": "./node_modules/.bin/nx affected:test",
-		"affected:lint": "./node_modules/.bin/nx affected:lint",
-		"affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
-		"affected": "./node_modules/.bin/nx affected",
-		"format": "./node_modules/.bin/nx format:write",
-		"format:write": "./node_modules/.bin/nx format:write",
-		"format:check": "./node_modules/.bin/nx format:check",
-		"update": "ng update @nrwl/schematics",
-		"update:check": "ng update",
-		"workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
-		"dep-graph": "./node_modules/.bin/nx dep-graph",
-		"help": "./node_modules/.bin/nx help"
-	},
-	"private": true,
-	"dependencies": {
-		"@nestjs/common": "5.5.0",
-		"@nestjs/core": "5.5.0",
-		"@angular/animations": "^7.0.0",
-		"@angular/common": "^7.0.0",
-		"@angular/compiler": "^7.0.0",
-		"@angular/core": "^7.0.0",
-		"@angular/forms": "^7.0.0",
-		"@angular/platform-browser": "^7.0.0",
-		"@angular/platform-browser-dynamic": "^7.0.0",
-		"@angular/router": "^7.0.0",
-		"core-js": "^2.5.4",
-		"rxjs": "6.3.3",
-		"zone.js": "^0.8.26"
-	},
-	"devDependencies": {
-		"ts-jest": "24.0.0",
-		"@nestjs/schematics": "5.11.2",
-		"@nestjs/testing": "5.5.0",
-		"jest-preset-angular": "7.0.0",
-		"@nrwl/builders": "7.8.0",
-		"jest": "24.1.0",
-		"@types/jest": "24.0.9",
-		"@angular/compiler-cli": "~7.2.0",
-		"@angular/language-service": "^7.0.0",
-		"@angular-devkit/build-angular": "~0.13.0",
-		"codelyzer": "~4.5.0",
-		"cypress": "3.1.0",
-		"@types/jquery": "3.3.6",
-		"@angular/cli": "7.3.1",
-		"@nrwl/schematics": "7.8.0",
-		"@types/node": "~8.9.4",
-		"dotenv": "6.2.0",
-		"ts-node": "~7.0.0",
-		"tslint": "~5.11.0",
-		"typescript": "3.2.2",
-		"prettier": "1.15.2"
-	}
+  "name": "rusmanwahab",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "./node_modules/.bin/nx lint && ng lint",
+    "e2e": "ng e2e",
+    "affected:apps": "./node_modules/.bin/nx affected:apps",
+    "affected:libs": "./node_modules/.bin/nx affected:libs",
+    "affected:build": "./node_modules/.bin/nx affected:build",
+    "affected:e2e": "./node_modules/.bin/nx affected:e2e",
+    "affected:test": "./node_modules/.bin/nx affected:test",
+    "affected:lint": "./node_modules/.bin/nx affected:lint",
+    "affected:dep-graph": "./node_modules/.bin/nx affected:dep-graph",
+    "affected": "./node_modules/.bin/nx affected",
+    "format": "./node_modules/.bin/nx format:write",
+    "format:write": "./node_modules/.bin/nx format:write",
+    "format:check": "./node_modules/.bin/nx format:check",
+    "update": "ng update @nrwl/schematics",
+    "update:check": "ng update",
+    "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
+    "dep-graph": "./node_modules/.bin/nx dep-graph",
+    "help": "./node_modules/.bin/nx help"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "latest",
+    "@angular/common": "latest",
+    "@angular/compiler": "latest",
+    "@angular/cdk": "latest",
+    "@angular/core": "latest",
+    "@angular/flex-layout": "latest",
+    "@angular/fire": "latest",
+    "@angular/forms": "latest",
+    "@angular/material": "latest",
+    "@angular/platform-browser": "latest",
+    "@angular/platform-browser-dynamic": "latest",
+    "@angular/router": "latest",
+    "angular2-moment": "latest",
+	"angulartics2": "latest",
+	"bufferutil": "latest",
+	"compression": "latest",
+	"cors": "latest",
+		"cross-env": "^5.2.0",
+		"debug": "latest",
+		"ejs": "latest",
+		"express": "latest",
+		"express-brute": "latest",
+		"express-rate-limit": "latest",
+		"faker": "latest",
+		"fire": "latest",
+		"firebase": "latest",
+		"github-slugger": "latest",
+		"googleapis": "latest",
+		"hammerjs": "latest",
+		"helmet": "latest",
+		"http-errors": "latest",
+		"lightship": "latest",
+		"morgan": "latest",
+		"multer": "latest",
+		"mysql2": "latest",
+		"mariadb": "latest",
+    "core-js": "^2.5.4",
+    "firebase": "latest",
+    "rxjs": "latest",
+    "socket.io": "latest",
+		"timeago.js": "latest",
+		"treeify": "latest",
+		"utf-8-validate": "latest",
+		"uuid": "latest",
+		"ws": "latest",
+		"xmlhttprequest": "latest",
+    "zone.js": "latest",
+    "@nestjs/common": "latest",
+    "@nestjs/core": "latest"
+  },
+  "devDependencies": {
+    "jest-preset-angular": "latest",
+    "@angular/compiler-cli": "latest",
+    "@angular/language-service": "latest",
+    "@angular-devkit/build-angular": "latest",
+    "codelyzer": "latest",
+    "protractor": "latest",
+    "ts-jest": "latest",
+    "@nestjs/schematics": "latest",
+    "@nestjs/testing": "latest",
+    "@nrwl/builders": "latest",
+    "jest": "latest",
+    "@types/jest": "latest",
+    "cypress": "latest",
+    "@types/jquery": "latest",
+    "@angular/cli": "latest",
+    "@nrwl/schematics": "latest",
+    "@types/node": "latest",
+    "dotenv": "latest",
+    "ts-node": "latest",
+    "tslint": "latest",
+    "typescript": "3.2.2",
+    "prettier": "latest"
+  }
 }
