--- a/angular.json
+++ b/angular.json
@@ -1,223 +1,341 @@
 {
-	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-	"version": 1,
-	"newProjectRoot": "",
-	"projects": {
-		"rusmanwahab": {
-			"root": "apps/rusmanwahab/",
-			"sourceRoot": "apps/rusmanwahab/src",
-			"projectType": "application",
-			"prefix": "rusmanwahab",
-			"schematics": {
-				"@nrwl/schematics:component": {
-					"style": "scss"
-				}
-			},
-			"architect": {
-				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
-					"options": {
-						"outputPath": "dist/apps/rusmanwahab",
-						"index": "apps/rusmanwahab/src/index.html",
-						"main": "apps/rusmanwahab/src/main.ts",
-						"polyfills": "apps/rusmanwahab/src/polyfills.ts",
-						"tsConfig": "apps/rusmanwahab/tsconfig.app.json",
-						"assets": [
-							"apps/rusmanwahab/src/favicon.ico",
-							"apps/rusmanwahab/src/assets"
-						],
-						"styles": ["apps/rusmanwahab/src/styles.scss"],
-						"scripts": [],
-						"es5BrowserSupport": true
-					},
-					"configurations": {
-						"production": {
-							"fileReplacements": [
-								{
-									"replace": "apps/rusmanwahab/src/environments/environment.ts",
-									"with": "apps/rusmanwahab/src/environments/environment.prod.ts"
-								}
-							],
-							"optimization": true,
-							"outputHashing": "all",
-							"sourceMap": false,
-							"extractCss": true,
-							"namedChunks": false,
-							"aot": true,
-							"extractLicenses": true,
-							"vendorChunk": false,
-							"buildOptimizer": true,
-							"budgets": [
-								{
-									"type": "initial",
-									"maximumWarning": "2mb",
-									"maximumError": "5mb"
-								}
-							]
-						}
-					}
-				},
-				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
-					"options": {
-						"browserTarget": "rusmanwahab:build",
-						"proxyConfig": "apps/rusmanwahab//proxy.conf.json"
-					},
-					"configurations": {
-						"production": {
-							"browserTarget": "rusmanwahab:build:production"
-						}
-					}
-				},
-				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
-					"options": {
-						"browserTarget": "rusmanwahab:build"
-					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": [
-							"apps/rusmanwahab/tsconfig.app.json",
-							"apps/rusmanwahab/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**"]
-					}
-				},
-				"test": {
-					"builder": "@nrwl/builders:jest",
-					"options": {
-						"jestConfig": "apps/rusmanwahab/jest.config.js",
-						"tsConfig": "apps/rusmanwahab/tsconfig.spec.json",
-						"setupFile": "apps/rusmanwahab/src/test-setup.ts"
-					}
-				}
-			}
-		},
-		"rusmanwahab-e2e": {
-			"root": "apps/rusmanwahab-e2e",
-			"projectType": "application",
-			"prefix": "",
-			"architect": {
-				"e2e": {
-					"builder": "@nrwl/builders:cypress",
-					"options": {
-						"cypressConfig": "apps/rusmanwahab-e2e/cypress.json",
-						"tsConfig": "apps/rusmanwahab-e2e/tsconfig.e2e.json",
-						"devServerTarget": "rusmanwahab:serve"
-					},
-					"configurations": {
-						"production": {
-							"devServerTarget": "rusmanwahab:serve:production"
-						}
-					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": "apps/rusmanwahab-e2e/tsconfig.e2e.json",
-						"exclude": ["**/node_modules/**"]
-					}
-				}
-			}
-		},
-		"api": {
-			"root": "apps/api",
-			"sourceRoot": "apps/api/src",
-			"projectType": "application",
-			"prefix": "api",
-			"schematics": {},
-			"architect": {
-				"build": {
-					"builder": "@nrwl/builders:node-build",
-					"options": {
-						"outputPath": "dist/apps/api",
-						"main": "apps/api/src/main.ts",
-						"tsConfig": "apps/api/tsconfig.app.json",
-						"assets": ["apps/api/src/assets"]
-					},
-					"configurations": {
-						"production": {
-							"optimization": true,
-							"extractLicenses": true,
-							"inspect": false,
-							"fileReplacements": [
-								{
-									"replace": "apps/api/src/environments/environment.ts",
-									"with": "apps/api/src/environments/environment.prod.ts"
-								}
-							]
-						}
-					}
-				},
-				"serve": {
-					"builder": "@nrwl/builders:node-execute",
-					"options": {
-						"buildTarget": "api:build"
-					}
-				},
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": [
-							"apps/api/tsconfig.app.json",
-							"apps/api/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**"]
-					}
-				},
-				"test": {
-					"builder": "@nrwl/builders:jest",
-					"options": {
-						"jestConfig": "apps/api/jest.config.js",
-						"tsConfig": "apps/api/tsconfig.spec.json"
-					}
-				}
-			}
-		},
-		"api-interface": {
-			"root": "libs/api-interface",
-			"sourceRoot": "libs/api-interface/src",
-			"projectType": "library",
-			"prefix": "rusmanwahab",
-			"architect": {
-				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
-					"options": {
-						"tsConfig": [
-							"libs/api-interface/tsconfig.lib.json",
-							"libs/api-interface/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**"]
-					}
-				},
-				"test": {
-					"builder": "@nrwl/builders:jest",
-					"options": {
-						"jestConfig": "libs/api-interface/jest.config.js",
-						"tsConfig": "libs/api-interface/tsconfig.spec.json"
-					}
-				}
-			},
-			"schematics": {}
-		}
-	},
-	"cli": {
-		"warnings": {
-			"typescriptMismatch": false,
-			"versionMismatch": false
-		},
-		"defaultCollection": "@nrwl/schematics"
-	},
-	"schematics": {
-		"@nrwl/schematics:application": {
-			"style": "scss",
-			"framework": "angular"
-		},
-		"@nrwl/schematics:library": {
-			"style": "scss"
-		}
-	},
-	"defaultProject": "rusmanwahab"
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "version": 1,
+  "newProjectRoot": "",
+  "projects": {
+    "rusmanwahab": {
+      "root": "apps/rusmanwahab/",
+      "sourceRoot": "apps/rusmanwahab/src",
+      "projectType": "application",
+      "prefix": "rusmanwahab",
+      "schematics": {
+        "@nrwl/schematics:component": {
+          "style": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/rusmanwahab",
+            "index": "apps/rusmanwahab/src/index.html",
+            "main": "apps/rusmanwahab/src/main.ts",
+            "polyfills": "apps/rusmanwahab/src/polyfills.ts",
+            "tsConfig": "apps/rusmanwahab/tsconfig.app.json",
+            "assets": [
+              "apps/rusmanwahab/src/favicon.ico",
+              "apps/rusmanwahab/src/assets"
+            ],
+            "styles": ["apps/rusmanwahab/src/styles.scss"],
+            "scripts": [],
+            "es5BrowserSupport": true
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/rusmanwahab/src/environments/environment.ts",
+                  "with": "apps/rusmanwahab/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "rusmanwahab:build",
+            "proxyConfig": "apps/rusmanwahab//proxy.conf.json"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "rusmanwahab:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "rusmanwahab:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/rusmanwahab/tsconfig.app.json",
+              "apps/rusmanwahab/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/builders:jest",
+          "options": {
+            "jestConfig": "apps/rusmanwahab/jest.config.js",
+            "tsConfig": "apps/rusmanwahab/tsconfig.spec.json",
+            "setupFile": "apps/rusmanwahab/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "rusmanwahab-e2e": {
+      "root": "apps/rusmanwahab-e2e",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/builders:cypress",
+          "options": {
+            "cypressConfig": "apps/rusmanwahab-e2e/cypress.json",
+            "tsConfig": "apps/rusmanwahab-e2e/tsconfig.e2e.json",
+            "devServerTarget": "rusmanwahab:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "rusmanwahab:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/rusmanwahab-e2e/tsconfig.e2e.json",
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    },
+    "rusmanwahab-api": {
+      "root": "apps/rusmanwahab-api",
+      "sourceRoot": "apps/rusmanwahab-api/src",
+      "projectType": "application",
+      "prefix": "rusmanwahab-api",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/builders:node-build",
+          "options": {
+            "outputPath": "dist/apps/rusmanwahab-api",
+            "main": "apps/rusmanwahab-api/src/main.ts",
+            "tsConfig": "apps/rusmanwahab-api/tsconfig.app.json",
+            "assets": ["apps/rusmanwahab-api/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/rusmanwahab-api/src/environments/environment.ts",
+                  "with": "apps/rusmanwahab-api/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/builders:node-execute",
+          "options": {
+            "buildTarget": "rusmanwahab-api:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/rusmanwahab-api/tsconfig.app.json",
+              "apps/rusmanwahab-api/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/builders:jest",
+          "options": {
+            "jestConfig": "apps/rusmanwahab-api/jest.config.js",
+            "tsConfig": "apps/rusmanwahab-api/tsconfig.spec.json"
+          }
+        }
+      }
+    },
+    "rusmanwahab-api-interface": {
+      "root": "libs/rusmanwahab-api-interface",
+      "sourceRoot": "libs/rusmanwahab-api-interface/src",
+      "projectType": "library",
+      "prefix": "rusmanwahab",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/rusmanwahab-api-interface/tsconfig.lib.json",
+              "libs/rusmanwahab-api-interface/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/builders:jest",
+          "options": {
+            "jestConfig": "libs/rusmanwahab-api-interface/jest.config.js",
+            "tsConfig": "libs/rusmanwahab-api-interface/tsconfig.spec.json"
+          }
+        }
+      },
+      "schematics": {}
+    },
+    "pengolahan-nilai": {
+      "root": "apps/pengolahan-nilai/",
+      "sourceRoot": "apps/pengolahan-nilai/src",
+      "projectType": "application",
+      "prefix": "rusmanwahab",
+      "schematics": {
+        "@nrwl/schematics:component": {
+          "style": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/apps/pengolahan-nilai",
+            "index": "apps/pengolahan-nilai/src/index.html",
+            "main": "apps/pengolahan-nilai/src/main.ts",
+            "polyfills": "apps/pengolahan-nilai/src/polyfills.ts",
+            "tsConfig": "apps/pengolahan-nilai/tsconfig.app.json",
+            "assets": [
+              "apps/pengolahan-nilai/src/favicon.ico",
+              "apps/pengolahan-nilai/src/assets"
+            ],
+            "styles": ["apps/pengolahan-nilai/src/styles.scss"],
+            "scripts": [],
+            "es5BrowserSupport": true
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/pengolahan-nilai/src/environments/environment.ts",
+                  "with": "apps/pengolahan-nilai/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "pengolahan-nilai:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "pengolahan-nilai:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "pengolahan-nilai:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/pengolahan-nilai/tsconfig.app.json",
+              "apps/pengolahan-nilai/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/builders:jest",
+          "options": {
+            "jestConfig": "apps/pengolahan-nilai/jest.config.js",
+            "tsConfig": "apps/pengolahan-nilai/tsconfig.spec.json",
+            "setupFile": "apps/pengolahan-nilai/src/test-setup.ts"
+          }
+        }
+      }
+    },
+    "pengolahan-nilai-e2e": {
+      "root": "apps/pengolahan-nilai-e2e",
+      "projectType": "application",
+      "prefix": "",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/builders:cypress",
+          "options": {
+            "cypressConfig": "apps/pengolahan-nilai-e2e/cypress.json",
+            "tsConfig": "apps/pengolahan-nilai-e2e/tsconfig.e2e.json",
+            "devServerTarget": "pengolahan-nilai:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "pengolahan-nilai:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": "apps/pengolahan-nilai-e2e/tsconfig.e2e.json",
+            "exclude": ["**/node_modules/**"]
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "warnings": {
+      "typescriptMismatch": false,
+      "versionMismatch": false
+    },
+    "defaultCollection": "@nrwl/schematics"
+  },
+  "schematics": {
+    "@nrwl/schematics:application": {
+      "style": "scss",
+      "framework": "angular"
+    },
+    "@nrwl/schematics:library": {
+      "style": "scss"
+    }
+  },
+  "defaultProject": "rusmanwahab"
 }
