--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,24 @@
     },
     "pengolahan-nilai-e2e": {
       "tags": []
+    },
+    "toko-buku": {
+      "tags": ["toko-buku"]
+    },
+    "toko-buku-e2e": {
+      "tags": []
+    },
+    "pengarsipan-surat": {
+      "tags": ["pengarsipan-surat"]
+    },
+    "pengarsipan-surat-e2e": {
+      "tags": []
+    },
+    "rental-mobil": {
+      "tags": []
+    },
+    "rental-mobil-e2e": {
+      "tags": []
     }
   }
 }
