--- a/package.json
+++ b/package.json
@@ -27,54 +27,57 @@
     "help": "./node_modules/.bin/nx help"
   },
   "private": true,
+  "engines": {
+    "node": "10.15.3",
+    "npm": "6.x"
+  },
   "dependencies": {
     "@angular/animations": "latest",
     "@angular/common": "latest",
     "@angular/compiler": "latest",
-    "@angular/cdk": "latest",
     "@angular/core": "latest",
-    "@angular/flex-layout": "latest",
-    "@angular/fire": "latest",
     "@angular/forms": "latest",
-    "@angular/material": "latest",
     "@angular/platform-browser": "latest",
     "@angular/platform-browser-dynamic": "latest",
     "@angular/router": "latest",
-    "angular2-moment": "latest",
-	"angulartics2": "latest",
-	"bufferutil": "latest",
-	"compression": "latest",
-	"cors": "latest",
-		"cross-env": "^5.2.0",
-		"debug": "latest",
-		"ejs": "latest",
-		"express": "latest",
-		"express-brute": "latest",
-		"express-rate-limit": "latest",
-		"faker": "latest",
-		"fire": "latest",
-		"firebase": "latest",
-		"github-slugger": "latest",
-		"googleapis": "latest",
-		"hammerjs": "latest",
-		"helmet": "latest",
-		"http-errors": "latest",
-		"lightship": "latest",
-		"morgan": "latest",
-		"multer": "latest",
-		"mysql2": "latest",
-		"mariadb": "latest",
     "core-js": "^2.5.4",
-    "firebase": "latest",
     "rxjs": "latest",
-    "socket.io": "latest",
-		"timeago.js": "latest",
-		"treeify": "latest",
-		"utf-8-validate": "latest",
-		"uuid": "latest",
-		"ws": "latest",
-		"xmlhttprequest": "latest",
     "zone.js": "latest",
+    "@angular/cdk": "latest",
+    "@angular/flex-layout": "latest",
+    "@angular/fire": "latest",
+    "@angular/material": "latest",
+    "angular2-moment": "latest",
+    "angulartics2": "latest",
+    "bufferutil": "latest",
+    "compression": "latest",
+    "cors": "latest",
+    "cross-env": "^5.2.0",
+    "debug": "latest",
+    "ejs": "latest",
+    "express": "latest",
+    "express-brute": "latest",
+    "express-rate-limit": "latest",
+    "faker": "latest",
+    "fire": "latest",
+    "firebase": "latest",
+    "github-slugger": "latest",
+    "googleapis": "latest",
+    "hammerjs": "latest",
+    "helmet": "latest",
+    "http-errors": "latest",
+    "lightship": "latest",
+    "morgan": "latest",
+    "multer": "latest",
+    "mysql2": "latest",
+    "mariadb": "latest",
+    "socket.io": "latest",
+    "timeago.js": "latest",
+    "treeify": "latest",
+    "utf-8-validate": "latest",
+    "uuid": "latest",
+    "ws": "latest",
+    "xmlhttprequest": "latest",
     "@nestjs/common": "latest",
     "@nestjs/core": "latest"
   },
