--- a/package.json
+++ b/package.json
@@ -47,22 +47,37 @@
     "@angular/pwa": "latest",
     "@angular/router": "latest",
     "@angular/service-worker": "latest",
+    "@godaddy/terminus": "latest",
     "@nestjs/common": "latest",
     "@nestjs/core": "latest",
+    "@nestjs/microservices": "latest",
+    "@nestjs/passport": "latest",
+    "@nestjs/platform-express": "^6.0.5",
+    "@nestjs/platform-fastify": "latest",
+    "@nestjs/platform-socket.io": "latest",
+    "@nestjs/schematics": "latest",
+    "@nestjs/terminus": "latest",
+    "@nestjs/testing": "latest",
+    "@nestjs/typeorm": "latest",
+    "@nestjs/websockets": "latest",
+    "@nguniversal/express-engine": "latest",
+    "@nguniversal/module-map-ngfactory-loader": "latest",
+    "@tinymce/tinymce-angular": "latest",
     "angular2-moment": "latest",
     "angulartics2": "latest",
     "bufferutil": "latest",
+    "cache-manager": "latest",
     "compression": "latest",
-    "core-js": "^2.5.4",
+    "core-js": "2.*",
     "cors": "latest",
-    "cross-env": "^5.2.0",
+    "cross-env": "latest",
     "debug": "latest",
+    "dotenv": "latest",
     "ejs": "latest",
     "express": "latest",
     "express-brute": "latest",
     "express-rate-limit": "latest",
     "faker": "latest",
-    "fire": "latest",
     "firebase": "latest",
     "github-slugger": "latest",
     "googleapis": "latest",
@@ -74,39 +89,61 @@
     "morgan": "latest",
     "multer": "latest",
     "mysql2": "latest",
+    "passport": "latest",
+    "passport-http-bearer": "latest",
     "rxjs": "latest",
+    "sequelize": "latest",
+    "sequelize-cli": "latest",
     "socket.io": "latest",
     "timeago.js": "latest",
     "treeify": "latest",
+    "typeorm": "latest",
     "utf-8-validate": "latest",
     "uuid": "latest",
+    "webpack-node-externals": "latest",
     "ws": "latest",
     "xmlhttprequest": "latest",
     "zone.js": "latest"
   },
   "devDependencies": {
     "ts-jest": "latest",
-    "@types/express": "4.16.0",
+    "@types/express": "latest",
     "jest-preset-angular": "latest",
+    "@angular-devkit/build-angular": "latest",
+    "@angular-devkit/build-ng-packagr": "latest",
+    "@angular/cli": "latest",
+    "@nestjs/cli": "latest",
     "@angular/compiler-cli": "latest",
     "@angular/language-service": "latest",
-    "@angular-devkit/build-angular": "latest",
+    "@types/jasmine": "latest",
+    "@types/jasminewd2": "latest",
+    "@types/multer": "latest",
+    "@types/socket.io": "latest",
+    "@types/sequelize": "latest",
     "codelyzer": "latest",
     "protractor": "latest",
-    "@nestjs/schematics": "latest",
-    "@nestjs/testing": "latest",
+    "jasmine-core": "latest",
     "@nrwl/builders": "latest",
     "jest": "latest",
     "@types/jest": "latest",
-    "cypress": "latest",
     "@types/jquery": "latest",
-    "@angular/cli": "latest",
-    "@nrwl/schematics": "latest",
     "@types/node": "latest",
-    "dotenv": "latest",
+    "@nrwl/schematics": "latest",
+    "cypress": "latest",
+    "jasmine-spec-reporter": "latest",
+    "karma": "latest",
+    "karma-chrome-launcher": "latest",
+    "karma-coverage-istanbul-reporter": "latest",
+    "karma-jasmine": "latest",
+    "karma-jasmine-html-reporter": "latest",
+    "ng-packagr": "latest",
+    "ts-loader": "latest",
     "ts-node": "latest",
+    "tsickle": "latest",
+    "tslib": "latest",
     "tslint": "latest",
-    "typescript": "3.2.2",
-    "prettier": "latest"
+    "typescript": "3.2.4",
+    "prettier": "latest",
+    "webpack-cli": "latest"
   }
 }
