--- a/angular.json
+++ b/angular.json
@@ -656,7 +656,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rental-mobil:build"
+            "browserTarget": "rental-mobil:build",
+            "open":true
           },
           "configurations": {
             "production": {
